--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "react": "^19.0.0",
+    "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
