--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
