--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.5",
+    "emailjs-com": "^3.2.0",
+    "form": "^0.2.5",
     "react": "^19.0.0",
     "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "swiper": "^11.2.6",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "use": "^3.1.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
