--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "lucide-react": "^0.509.0",
     "vite": "^6.3.1"
   }
 }
