--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "emailjs-com": "^3.2.0",
     "form": "^0.2.5",
+    "npm": "^11.4.0",
     "react": "^19.0.0",
     "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
