--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.2",
     "react-router-dom": "^7.5.3",
     "swiper": "^11.2.6",
