--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=123soleil
-DB_NAME=globalreno_db
-JWT_SECRET=jesuistest
+PORT="5000"
+DB_HOST="localhost"
+DB_USER="root"
+DB_PASSWORD="123soleil"
+DB_NAME="globalreno_db"
+JWT_SECRET="jesuistest""
