--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-PORT="5000"
-DB_HOST="localhost"
-DB_USER="root"
-DB_PASSWORD="123soleil"
-DB_NAME="globalreno_db"
-JWT_SECRET="jesuistest""
+DB_HOST=localhost
+DB_USER=globalreno_user
+DB_PASSWORD=123soleil
+DB_NAME=globalreno_db
+PORT=5000
+JWT_SECRET=esuistest
