--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,5 @@ DB_PASSWORD=123soleil
 DB_NAME=globalreno_db
 PORT=5000
 JWT_SECRET=esuistest
+API_URL=https://api.globalreno-renovation.fr
+FRONT_URL=https://globalreno-renovation.fr
